# stem-extractor

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
ml_pipeline/: dataset.py  evaluate.py  evaluate_test_set.py  export_onnx.py  generate_plots.py  inference.py  model.py  plots.py  requirements.txt  setup_sample.py  train.py
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/CPP/: test_fifo.cpp
tests/Python/: test_model.py
